--- a/SilencePlease/app/build.gradle
+++ b/SilencePlease/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "com.robinkanatzar.android.aca.birthday2"
+        applicationId "com.robinkanatzar.android.aca.silenceplease"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
@@ -23,5 +23,4 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
