--- a/FindingFrench/app/build.gradle
+++ b/FindingFrench/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'hugo'
 
 android {
     compileSdkVersion 24
@@ -23,4 +25,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.+'
+    compile 'com.jakewharton:butterknife:8.0.1'
 }
