--- a/FindingFrench/build.gradle
+++ b/FindingFrench/build.gradle
@@ -6,6 +6,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+' // SDK Manager Plugin
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.1.0' // Annotation-triggered method call logging for debug builds
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
