cloned google translate app

--- a/GoogleTranslateExample/app/build.gradle
+++ b/GoogleTranslateExample/app/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+    // https://mvnrepository.com/artifact/com.memetix/microsoft-translator-java-api
+    //compile group: 'com.memetix', name: 'microsoft-translator-java-api', version: '0.3'
+
 }
